<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="please_select_file_message">Please select file to download</string>
    <string name="download">Download</string>
    <string name="we_are_downloading">We are downloading</string>

    <string name="glide_description">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_description">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_description">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="notification_channel_id" translatable="false">load_app_channel</string>
    <string name="notification_channel_name" translatable="false">Load App</string>

    <string name="detail">Click to view detail</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="load_app">LoadApp</string>

</resources>
