<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layoutDescription="@xml/detail_scene"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:id="@+id/fileNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/labelFileName"
            style="@style/TextDetailLabelStyle"
            android:layout_weight="1"
            android:text="@string/file_name" />

        <TextView
            android:id="@+id/textFileName"
            style="@style/TextDetailStyle"
            tools:text="@string/glide_description" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/statusLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/labelStatus"
            style="@style/TextDetailLabelStyle"
            android:layout_weight="1"
            android:text="@string/status" />

        <TextView
            android:id="@+id/textStatus"
            style="@style/TextDetailStyle"
            tools:text="@string/success" />
    </LinearLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>